# manager-backend

./: .env  .gitignore  Cargo.toml  README.md  config.yml  docker-compose.yml
migrations/2024-02-06-224158_add_structure/: down.sql  up.sql
src/: config.rs  handlers.rs  jwt.rs  main.rs  models.rs  schema.rs
src/handlers/: patients.rs  users.rs
src/json_serialization/: mod.rs
src/models/: models.rs  patients.rs  users.rs
src/routes/: login.rs  routes.rs
