[package]
name = "manager-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
serde_yaml = "0.9.31"
serde = { version = "1.0.196", features = ["derive"] }

[dependencies]
actix-cors = "0.7.0"
actix-rt = "2.9.0"
actix-service = "2.0.2"
actix-web = "4.4.1"
actix-web-httpauth = "0.8.1"
alcoholic_jwt = "4091.0.0"
bcrypt = "0.15.0"
chrono = {version = "0.4.33", features = ["serde"]}
derive_more = "0.99.17"
diesel = {version="2.1.4", features = ["postgres", "r2d2", "chrono"]}
dotenv = "0.15.0"
env_logger = "0.11.1"
futures = "0.3.30"
jsonwebtoken = "9.2.0"
openssl = "0.10.63"
r2d2 = "0.8.10"
reqwest = "0.11.24"
serde = {version = "1.0.196" , features = ["derive"]}
serde_derive = "1.0.196"
serde_json = "1.0.113"
serde_yaml = "0.9.31"
uuid = {version = "1.7.0", features = ["v4", "fast-rng", "macro-diagnostics"]}
